L2DistanceBench has been added.