@@ -9,6 +9,9 @@ dependencies {
     implementation(libs.commons.lang)
     implementation(libs.jcTools.core)
 
+    annotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.36")
+    implementation("org.openjdk.jmh:jmh-core:1.36")
+
     testImplementation(project(":xodus-utils-test"))
 }
 
@@ -27,6 +30,33 @@ tasks {
             allWarningsAsErrors = true
         }
     }
+
+    register<JavaExec>("runL2DistanceBench") {
+        group = "application"
+        mainClass = "jetbrains.exodus.diskann.bench.L2DistanceBench"
+        classpath = sourceSets["main"].runtimeClasspath + configurations["benchDependencies"]
+        jvmArgs = listOf(
+            "-server",
+            "-Xmx16g",
+            "-XX:+HeapDumpOnOutOfMemoryError",
+            "--add-modules",
+            "jdk.incubator.vector",
+            "-Djava.awt.headless=true",
+            "--enable-preview"
+        )
+        systemProperties = mapOf(
+            "bench.path" to (project.findProperty("bench.path"))
+        )
+
+        if (jdkHome != null) {
+            executable = "$jdkHome/bin/java"
+        } else {
+            javaLauncher.set(rootProject.javaToolchains.launcherFor {
+                languageVersion.set(JavaLanguageVersion.of(20))
+            })
+        }
+    }
+
     register<JavaExec>("runSift1MBench") {
         group = "application"
         mainClass = "jetbrains.exodus.diskann.bench.SIFT1MBench"
